<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <Button
                android:id="@+id/cancel_button_saa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="2dp"
                android:text="@string/cancel_btn_saa_ass"
                android:drawableEnd="@drawable/cancel"
                android:background="@drawable/round_button"
                android:textColor="@color/colorGrey"
                tools:ignore="RtlCompat" />


            <Button
                android:id="@+id/save_button_saa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:text="@string/save_btn_saa_ass"
                android:drawableEnd="@drawable/ok"
                android:background="@drawable/round_button"
                android:textColor="@color/colorGrey"
                tools:ignore="RtlCompat" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/one_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/one_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/one_edt_saa_ass"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/two_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/two_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/two_edt_saa_ass"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/three_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/three_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/three_edt_saa_ass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/five_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/five_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/five_edt_saa_ass"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:backgroundTint="@color/colorPrimary"
            android:editable="false"
            tools:ignore="Deprecated"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/one_min_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/one_min_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/one_min_edt_saa_ass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/thre_min_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/three_min_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/three_min_edt_saa_ass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/five_min_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/five_min_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/five_min_edt_saa_ass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/seven_min_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck" />


            <EditText
                android:id="@+id/seven_min_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/seven_min_edt_saa_ass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/ten_min_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/ten_min_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/ten_min_edt_saa_ass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/fifteen_min_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:theme="@style/WhiteCheck"/>


            <EditText
                android:id="@+id/fifteen_min_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorLiteBlue"
                android:padding="20dp"
                android:textSize="19dp"
                android:editable="false"
                tools:ignore="Deprecated"
                android:text="@string/fifteen_min_edt_saa_ass"/>

        </LinearLayout>







    </LinearLayout>

</ScrollView>