<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="115dp">

        <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_margin="8dp"
        android:layout_weight="0.96"
        android:clickable="true"
        android:layout_alignParentTop="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:width="170dp"
                android:height="55dp"
                android:text="@string/time_tv_am"
                android:textSize="37dp"
                android:textStyle="bold"
                android:layout_marginLeft="6dp"/>

            <TextView
                android:id="@+id/alramDescription_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/time_textView"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:width="170dp"
                android:height="30dp"
                android:textSize="15dp"
                android:textStyle="italic"
                android:text="@string/description_tv_am"
                android:layout_marginLeft="6dp"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/alarm_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:switchPadding="09dp"
                android:padding="10dp"
                android:text="@string/alarmOff_switch_am"
                android:textStyle="bold"
                android:theme="@style/SwitchCompatStyle"/>

            <TextView
                android:id="@+id/date_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:width="170dp"
                android:height="45dp"
                android:text="Sound
Friday, August 25 (2017)"
                android:textSize="14dp"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:layout_marginRight="6dp"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>